# AWS-dr-backup-lab

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  SECURITY_FIXES.md  SECURITY_IMPROVEMENTS.md  architecture.md  constructs_overview.md  implementation_summary.md  plan.md  runbooks_gamedays.md  stacks_overview.md  testing_strategy.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
infra/: app.py  app_warm_standby.py  cdk.json  pyproject.toml  requirements.txt
infra/constructs/: backup_plan.py  deployment_automation.py  ecs_service_alb.py  kms_multi_region_key.py  rds_with_replica.py  recovery_parameters.py  s3_replication_pair.py  secrets_manager.py  template_storage.py
infra/stacks/: backup_stack.py  observability.py  primary_app.py  primary_data.py  primary_network.py  routing_dr_orchestration.py  secondary_app.py  secondary_data.py  secondary_network.py
infra/templates/: application-template.json  network-template.json
infra/tests/: test_synthesis.py
