[tool.poetry]
name = "aws-dr-backup-restore"
version = "1.0.0"
description = "AWS Disaster Recovery Lab - Backup and Restore Pattern"
authors = ["Platform Team <platform@company.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "^2.212.0"
constructs = "^10.4.0"
aws-cdk-aws-lambda-python-alpha = "^2.212.0a0"
boto3 = "^1.40.0"
python-dotenv = "^1.1.0"
pyyaml = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.2.0"
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.17.0"
isort = "^6.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.0"
sphinx-rtd-theme = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
synth = "app:main"
deploy = "scripts.deploy:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"